[tool.poetry]
name = "mechansm"
version = "0.0.1"
description = "A set of utils"
authors = [
  "edazizovv",
]
license = "MIT"
readme = "README.md"
packages = [{include = "mechansm"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"